--- a/config/_default/hyas/doks.toml
+++ b/config/_default/hyas/doks.toml
@@ -54,7 +54,7 @@ sectionFooter = false # false (default) or true
 relatedPosts = false # false (default) or true
 
 # Footer
-footer = "Powered by <a class=\"text-muted\" href=\"https://www.netlify.com/\">Netlify</a>, <a class=\"text-muted\" href=\"https://gohugo.io/\">Hugo</a>, and <a class=\"text-muted\" href=\"https://getdoks.org/\">Doks</a>"
+footer = "© 2023 PostOwl"
 
 # kaTex
 kaTex = false
