--- a/config/_default/module.toml
+++ b/config/_default/module.toml
@@ -30,6 +30,7 @@
 [[mounts]]
   source = "node_modules/@hyas/doks-core/assets"
   target = "assets"
+  excludeFiles = "/scss/**.scss"
 
 [[mounts]]
   source = "node_modules/@hyas/doks-core/data"
@@ -40,19 +41,19 @@
   target = "layouts"
 
 [[mounts]]
-  source = "themes/my-doks-theme/archetypes"
+  source = "themes/postowl-theme/archetypes"
   target = "archetypes"
 
 [[mounts]]
-  source = "themes/my-doks-theme/assets"
+  source = "themes/postowl-theme/assets"
   target = "assets"
 
 [[mounts]]
-  source = "themes/my-doks-theme/data"
+  source = "themes/postowl-theme/data"
   target = "data"
 
 [[mounts]]
-  source = "themes/my-doks-theme/layouts"
+  source = "themes/postowl-theme/layouts"
   target = "layouts"
 
 [[mounts]]
