--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -11,6 +11,7 @@ languageCode = "en-US"
 paginate = 10
 rssLimit = 10
 summarylength = 20 # 70 (default)
+timeout = "1m"
 
 # Multilingual
 defaultContentLanguage = "en"
