--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "postowl-website",
   "version": "0.1.0",
+  "private": true,
   "description": "PostOwl website",
   "author": "Tom Atkins",
   "license": "AGPLv3",
